# models/result.go
@@ -5,3 +5,15 @@ type ApiResult struct {
 	Msg    string      `json:"msg" description:"error msg"`
 	Data   interface{} `json:"data" description:"data"`
 }
+
+type ArticlesResult struct {
+	Status bool       `json:"status" description:"status"`
+	Msg    string     `json:"msg" description:"error msg"`
+	Data   []*Article `json:"data" description:"data"`
+}
+
+type ArticleResult struct {
+	Status bool     `json:"status" description:"status"`
+	Msg    string   `json:"msg" description:"error msg"`
+	Data   *Article `json:"data" description:"data"`
+}
